--- a/.github/workflows/Pipelie.yml
+++ b/.github/workflows/Pipelie.yml
@@ -58,7 +58,7 @@ jobs:
         git config --global user.email actions@github.com && git config --global user.name GitHub Actions
         echo "cloning config repo Argocd-manifest"
         git clone https://oauth2:${{ secrets.Git_TOKEN }}@github.com/${{ github.repository_owner }}/Argocd-manifest.git
-        cd kube_manifest
+        cd manifest
         echo "checkout main branch"
         git checkout main
         echo "Updating Image tag in values.yaml file"
