--- a/.github/workflows/Pipelie.yml
+++ b/.github/workflows/Pipelie.yml
@@ -62,6 +62,8 @@ jobs:
         cd Argocd-manifest
         echo "checkout main branch"
         git checkout main
+        echo "Listing files in the repository:"
+        ls -l
         echo "Updating Image tag in deployment.yaml file"
         sed -i "s,mohamedmagdykhamis/todo-app:.*,mohamedmagdykhamis/todo-app:${{ github.sha }}," manifest/deployment.yaml
         git add deployment.yaml && git commit -m "Updated Docker image tag to ${{ github.sha }}"
