--- a/.github/workflows/Pipelie.yml
+++ b/.github/workflows/Pipelie.yml
@@ -66,6 +66,6 @@ jobs:
         ls -l
         cd manifest
         echo "Updating Image tag in deployment.yaml file"
-        sed -i "s,mohamedmagdykhamis/todo-app:.*,mohamedmagdykhamis/todo-app:${{ github.sha }}," manifest/deployment.yaml
+        sed -i "s,mohamedmagdykhamis/todo-app:.*,mohamedmagdykhamis/todo-app:${{ github.sha }}," deployment.yaml
         git add deployment.yaml && git commit -m "Updated Docker image tag to ${{ github.sha }}"
         git push
