--- a/.github/workflows/Pipelie.yml
+++ b/.github/workflows/Pipelie.yml
@@ -7,51 +7,51 @@ on:
     branches: ["main"]
 
 jobs:
-#   test-and-build:
+  test-and-build:
 
-    # runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-    # steps:
-    # - name: Checkout code
-    #   uses: actions/checkout@v4
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-    # - name: Install Node.js
-    #   uses: actions/setup-node@v2
-    #   with:
-    #     node-version: '14'
+    - name: Install Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
 
-    # - name: Install dependencies
-    #   run: |
-    #     npm install
+    - name: Install dependencies
+      run: |
+        npm install
 
-    # - name: Run tests
-    #   run: |
-    #     npm test
+    - name: Run tests
+      run: |
+        npm test
 
-    # - name: Build React app
-    #   run: |
-    #     npm run build
+    - name: Build React app
+      run: |
+        npm run build
 
-    # - name: Build Docker image
-    #   run: |
-    #     docker build --tag mohamedmagdykhamis/todo-app:${{ github.sha }} .
+    - name: Build Docker image
+      run: |
+        docker build --tag mohamedmagdykhamis/todo-app:${{ github.sha }} .
 
   publish-and-update:
     runs-on: ubuntu-latest
-    # needs: test-and-build
+    needs: test-and-build
 
     steps:
-    # - name: Login to Docker Hub
-    #   uses: docker/login-action@v3
-    #   with:
-    #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-    #     password: ${{ secrets.DOCKERHUB_PASSWORD }}
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-    # - name: Push Docker image
-    #   uses: docker/build-push-action@v5
-    #   with:
-    #     push: true
-    #     tags: mohamedmagdykhamis/todo-app:${{ github.sha }}
+    - name: Push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        push: true
+        tags: mohamedmagdykhamis/todo-app:${{ github.sha }}
 
     - name: Update Config Repo
       run: |
